--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,5 @@ readme = "README.md"
 requires-python = ">=3.8"
 dependencies = [
     "requests",
-    "beautifulsoup4",
-    "plyer"
+    "beautifulsoup4"
 ]
